--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -335,7 +335,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="./jigsaw_linux.x86_64.arm64"
+export_path="dist/jigsaw_linux.x86_64.arm64"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
