--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -330,12 +330,15 @@ name="Linux/X11"
 platform="Linux"
 runnable=true
 advanced_options=false
-dedicated_server=false
+dedicated_server=true
 custom_features=""
-export_filter="all_resources"
+export_filter="customized"
+customized_files={
+"res://": "strip"
+}
 include_filter="*.env"
 exclude_filter=""
-export_path="dist/jigsaw_linux.x86_64.arm64"
+export_path="dist/puzzle.x86_64"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -352,7 +355,7 @@ debug/export_console_wrapper=1
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
-binary_format/architecture="arm64"
+binary_format/architecture="x86_64"
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
 ssh_remote_deploy/port="22"
