--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -336,7 +336,7 @@ application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
 application/company_name=""
-application/product_name=""
+application/product_name="Jigsaw"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
@@ -366,7 +366,7 @@ Remove-Item -Recurse -Force '{temp_dir}'"
 name="piBox"
 platform="Linux"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -385,7 +385,7 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
