--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -372,7 +372,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="build/pi/piBox2.arm64"
+export_path="build/piBuilds/boxBlue.arm64"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
