--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Godot 4+ specific ignores
+addons/godot-firebase/firebase.env
 .env
 *.pem
 
@@ -18,3 +19,4 @@ tmp/
 *.tmp
 *.log
 .godot/
+.vscode/
