Increase font size

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -26,6 +26,7 @@ debug/export_console_wrapper=1
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
+shader_baker/enabled=false
 binary_format/architecture="arm64"
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
@@ -80,6 +81,7 @@ application/min_macos_version_x86_64="10.12"
 application/min_macos_version_arm64="11.00"
 application/export_angle=0
 display/high_res=true
+shader_baker/enabled=false
 application/additional_plist_content=""
 xcode/platform_build="14C18"
 xcode/sdk_version="13.1"
@@ -305,7 +307,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="build/windows/BoxMax.exe"
+export_path="../jigsaw1_5_0.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -322,6 +324,7 @@ debug/export_console_wrapper=1
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
+shader_baker/enabled=false
 binary_format/architecture="x86_64"
 codesign/enable=false
 codesign/timestamp=true
@@ -389,6 +392,7 @@ debug/export_console_wrapper=0
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
+shader_baker/enabled=false
 binary_format/architecture="arm64"
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
@@ -435,6 +439,7 @@ debug/export_console_wrapper=1
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
+shader_baker/enabled=false
 binary_format/architecture="x86_64"
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
