--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -52,7 +52,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="build/mac/jigsaw-mac-drBartlett-ec2.zip"
+export_path="./jigsaw4-mac.zip"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
