Added help menu, fixed stat tracking

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ addons/godot-firebase/firebase.env
 # Build files
 dist/
 build/
+*.exe
+*.zip
 
 # OS / Editor junk
 .DS_Store
@@ -22,8 +24,9 @@ tmp/
 .godot/
 .vscode/
 *.png
-*.svg
 *.bmp
 *.jpg
 *.json
+*.svg
 *.html
+*.Identifier
