--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -307,7 +307,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.env"
 exclude_filter=""
-export_path="../jigsaw1_5_0.exe"
+export_path="build/windows/jigsaw1_5_0.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
