--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           lfs: true
+       
+      - name: Install export dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y fontconfig libfontconfig1
 
       - name: Make output folders
         run: |
